# battery-data-standardizer

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: download_model.py  serve_model.sh
src/bds/: __init__.py  cache.py  cli.py  config.py  exporter.py  pipeline.py  schema.py  validator.py
src/bds/agent/: __init__.py  code_generator.py  llm_client.py  orchestrator.py  prompts.py  tool_use.py  tools.py
src/bds/inspector/: __init__.py  archive.py  preview.py
src/bds/sandbox/: __init__.py  executor.py
tests/: test_pipeline.py
tests/test_agent/: test_prompts.py
tests/test_inspector/: test_archive.py  test_preview.py
tests/test_sandbox/: test_executor.py
